# proglang-playground

./: .gitignore  .gitmodules  LICENSE  README.md  Vagrantfile  bootstrap.sh  h
ATS/: .gitignore
ATS/Introduction/: Makefile  Makefile.template  hello.dats  template.dats
Ada/: benchmark.gpr
Ada/Benchmark/: .gitignore  alire.toml  benchmark.gpr  workspace.code-workspace
Ada/Benchmark_Tests/: alire.toml  benchmark_tests.gpr  workspace.code-workspace
Ada/command_line_arguments/: alire.toml  command_line_arguments.gpr  workspace.code-workspace
Ada/my_hello_world/: alire.toml  workspace.code-workspace
Ada/src/: main.adb
Ballerina/benchmark/: Ballerina.toml  Dependencies.toml  main.bal
Ballerina/greeter/: Ballerina.toml  Dependencies.toml
C/: .gitignore
C/Benchmark/: CMakeLists.txt  fib.c  fib.h  main.c  meson.build  perfect_number.c  perfect_number.h
C/Benchmark/src/: CMakeLists.txt  benchmark_config.h.in  dynarr.c  fib.c  fib.h  image.c  image.h  main.c  mandelbrot.c  mandelbrot.h  meson.build  perfect_number.c  perfect_number.h  primes.c  primes.h
C/ZMQ/: .gitignore  tasksink.c  taskvent.c  taskwork.c
Clojure/benchmark/: .gitignore  LICENSE  README.md  project.clj
ClojureScript/example/: project.clj
CommonLisp/: Vagrantfile  bootstrap.sh
CommonLisp/benchmark/: .gitignore  README.txt  benchmark.asd  benchmark.lisp  build.lisp  build_core.lisp  build_exe.lisp
CommonLisp/let-over-lambda/: let-over-lambda.asd  packages.lisp
CommonLisp/ltk-demo/: README.txt  hello-1.lisp  ltk-demo.asd  ltk-demo.lisp  package.lisp
Crystal/Benchmark/: shard.yml
Crystal/benchmark/: README.md  shard.yml
Crystal/my-benchmark/: .gitignore  LICENSE  my-benchmark  shard.yml
Csharp/Benchmark/: Benchmark.sln
DPC++/sycl-benchmark/: .gitignore  fibonacci.cpp  fibonacci.h  fibonacci.ixx  perfect_number.cpp  perfect_number.h  sycl-benchmark.cpp  sycl-benchmark.sln  sycl-benchmark.vcxproj  sycl-benchmark.vcxproj.filters
Dylan/benchmark/: Makefile  dylan-package.json
Dylan/hello-world/: .gitignore  dylan-package.json  hello-world.dylan
Elixir/: .gitignore  README.md  Vagrantfile  bootstrap.sh  vim_provision.sh
Elixir/7lang7weeks/: print.exs
Elixir/benchmark/: README.md  mix.exs
Elixir/kv/: README.md  mix.exs
Elm/: .gitignore  HelloWorld.elm  InputDialog.elm  MouseTracker.elm  SignUpForm.elm
Elm/7lang7weeks/: text_input.elm
Elm/benchmark/: BenchmarkGUI.elm  BenchmarkGUI.elm~  Fib.elm  Main.elm  PerfectNumber.elm  elm_dependencies.json
Erlang/tutorial/: README.md  tut11.erl  tut5.erl  tut6.erl  tut7.erl  tut8.erl
FSharp/Benchmark/: .gitignore  Benchmark.sln
Fortran/: .gitignore
Fortran/Benchmark/: .gitignore  CMakeLists.txt  Makefile  Makefile.pg  benchmark.f90  benchmark.f95  color_map.f90  color_map.f95  fibonacci.f90  fibonacci.f95  mandelbrot.f90  mandelbrot.f95  perfect_number.f90  perfect_number.f95
Fortran/Benchmark/src/: CMakeLists.txt  Makefile  benchmark.f90  image.f90  mandelbrot.f90  primes.f90
Fortran/Benchmark/src/stb_image/: CMakeLists.txt  stbi.f90
Fortran/ModernFortran/: .gitignore  CMakeLists.txt  Makefile  caf_toolchain.cmake  tsunami_2.f95
Fortran/ModernFortran/stock-prices/: .gitignore  CMakeLists.txt  Makefile  mod_alloc.f90  mod_alloc.f95  mod_array.f90  mod_array.f95  mod_io.f90  mod_io.f95  stock_gain.f90  stock_gain.f95  stock_volatility.f90
Fortran/ModernFortran/tsunami/: .gitignore  CMakeLists.txt  Makefile  mod_diff.f90  mod_field.f90  mod_parallel.f90  tsunami.f90  tsunami_7.f90  tsunami_8.f90
Fortran/ModernFortran/tsunami/ocaml/: plot_1d_time_steps.ml
Frege/benchmark/: benchmark.fr  fib.fr
Go/: .gitignore  bootstrap.sh
Go/benchmark/: benchmark.go  go.mod
Go/hello/: hello.go
Haskell/: .gitignore  LICENSE  haskell-playground.cabal
Haskell/.HTF/: jsonpp.exe.history
Haskell/src/: JsonPretty.hs  Tail.hs
Haskell/src/Benchmark/: Benchmark.hs  Fibonacci.hs  Mandelbrot.hs  PerfectNumber.hs
Haxe/: .gitignore
Haxe/benchmark/: benchmark.hxml
Haxe/hello_world/: Main.hx  application.xml
Idris/: .gitignore
Idris/Blog/: Vector.idr
JS/: .gitignore
JS/Benchmark/: .gitignore  benchmark.js  colormap.js  fib.js  mandelbrot.js  package.json  perfect_numbers.js
JS/Benchmark.ts/: .gitignore  README.md  colormap.ts  fib.ts  index.ts  mandelbrot.ts  package.json  perfect_numbers.ts
JS/SimpleFileEditor/: package.json
Lua/: .gitignore  benchmark.lua  complex.lua  complex_old.lua  complex_test.lua  fib.lua  mandelbrot.lua  perfect_numbers.lua
Nim/: .gitignore  greetings.nim
OCaml/: Vagrantfile  bootstrap.sh
Perl/: .gitignore  bootstrap.sh
Python/: .gitignore
Python/EnsembleLearning/: pyproject.toml
Python/EnsembleLearning/chapter_01/: fit_complex.py
Python/Hy/: benchmark.hy  fibonacci.hy  perfect_number.hy  pyproject.toml
Python/Hy/hy_benchmark/: benchmark.hy  fibonacci.hy  perfect_number.hy
Python/benchmark/: README.rst  pyproject.toml
Python/benchmark/benchmark/: benchmark.py  fibonacci.py  perfect_number.py  runner.py
Python/benchmark/benchmark.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
Python/benchmark/src/benchmark/: fibonacci.py  mandelbrot.py  perfect_number.py  runner.py
Python/benchmark/tests/: test_benchmark.py  test_fibonacci.py  test_perfect_number.py
Racket/: .gitignore
Rust/Benchmark/: .gitignore  Cargo.toml
Rust/Benchmark/src/: fibonacci.rs  main.rs  mandelbrot.rs  montecarlo.rs  perfect_number.rs  primes.rs
Rust/Benchmark/src/test/: test_fib.rs  test_fibonacci.rs  test_pn.rs  test_primes.rs
Rust/RustInAction/ch01/ch01-time-api/: Cargo.toml
Rust/RustInAction/ch01/ch01-time-api/src/: main.rs
Rust/RustInAction/ch06/meminfo/: Cargo.toml
Rust/RustInAction/ch06/meminfo/src/: main.rs
Rust/RustInAction/ch07/serde_eg/: Cargo.toml
Rust/RustInAction/ch07/serde_eg/src/: main.rs
Rust/Tutorial/closures/: Cargo.toml
Rust/Tutorial/closures/src/: main.rs
Scala/: .gitignore
Swift/: bootstrap.sh  get_files.sh  push_files.sh
Urn/: .gitignore  benchmark.lisp  fibonacci.lisp  mandelbrot.lisp  package.lisp  perfect-numbers.lisp
(+390 files in other folders)
