name:           haskell-playground
version:        0.1.0
synopsis:       A playground for the Haskell programming language
license:        MIT
license-file:   ../LICENSE
author:         Kay-Uwe Kirstein
build-type:     Simple
cabal-version:  >=1.10

executable tail
    main-is:            Tail.hs
    build-depends:      base >=4.6 && <5, containers, bytestring, safe
    hs-source-dirs:     src
    default-language:   Haskell2010

executable jsonpp
    main-is:            JsonPretty.hs
    build-depends:      base >=4.6 && <5, text, aeson < 0.8, pretty,
                        bytestring, vector, unordered-containers, HTF
    hs-source-dirs:     src
    default-language:   Haskell2010

