[tool.poetry]
name = "ensemblelearning"
version = "0.1.0"
description = "Python code of the book Ensemble Methods for Machine Learning"
authors = ["Kay-Uwe Kirstein <kay-uwe@kirsteinhome.ch>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.3"
seaborn = "^0.11.1"
pandas = "^1.2.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
