[tool.poetry]
name = "hy_benchmark"
version = "0.1.0"
description = "A playground for the Hy programming language"
authors = ["Kay-Uwe Kirstein <kay-uwe@kirsteinhome.ch>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">= 3.10,< 3.13"
hy = "^0.27.0"
hyrule = "^0.4.0"

[tool.poetry.group.dev.dependencies]

[tool.poetry.scripts]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
