[project]
name = "benchmark"
version = "0.1.0"
description = "A set of micro-benchmarks for the Python programming language"
authors = ["Kay-Uwe Kirstein <kay-uwe@kirsteinhome.ch>"]
license = "MIT"
requires-python = ">=3.14"

dependencies = [
    # Add runtime dependencies here
]

[project.optional-dependencies]
dev = [
    "pytest>=5.2",
    "autopep8>=1.4.4",
    "pylint>=2.4.4",
]

# poetry section (legacy)
##[tool.poetry]
##name = "benchmark"
##version = "0.1.0"
##description = "A set of micro-benchmarks for the Python programming language"
##authors = ["Kay-Uwe Kirstein <kay-uwe@kirsteinhome.ch>"]
##license = "MIT"
##
##[tool.poetry.scripts]
##benchmark = "benchmark.runner:run"
##
##[tool.poetry.dependencies]
##python = "^3.14"
##
##[tool.poetry.dev-dependencies]
##pytest = "^5.2"
##autopep8 = "^1.4.4"
##pylint = "^2.4.4"
##
##[build-system]
##requires = ["poetry>=0.12"]
##build-backend = "poetry.masonry.api"
