[package]
name = "benchmark"
version = "0.3.1"
authors = ["Kay-Uwe Kirstein <kay-uwe@kirsteinhome.ch>"]
edition = "2018"

[dependencies]
num = "^0.4"
num-complex = "^0.4"
image = "^0.25.8"
rayon = "^1.0"
rand = {version = "^0.9.2", features = ["small_rng"]}

[dev-dependencies]
float-cmp = "^0.10.0"
