[package]
name = "closures"
version = "0.1.0"
authors = ["Kay-Uwe Kirstein <kay-uwe@kirsteinhome.ch>"]
description = "A closures example from the Rust book: https://doc.rust-lang.org/book/ch13-01-closures.html"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

