[package]
name = "ch01-time-api"
version = "0.1.0"
authors = ["Kay-Uwe Kirstein <kay-uwe@kirsteinhome.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "^0.4.10"
rocket = "^0.4.0"
rocket_codegen = "^0.4.0"
serde = "^1.0"
serde_derive = "^1.0"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["json"]
