[package]
name = "meminfo"
version = "0.1.0"
authors = ["Kay-Uwe Kirstein <kay-uwe@kirsteinhome.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#winapi = {version = "^0.3", feature = ["everything"]}
winapi = "^0.2"
kernel32-sys = "^0.2"
