[package]
name = "serde_eg"
version = "0.1.0"
authors = ["Kay-Uwe Kirstein <kay-uwe@kirsteinhome.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "^1.3"
serde = "^1.0"
serde_cbor = "^0.11"
serde_derive = "^1.0"
serde_json = "1.0"
